--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,3 +16,6 @@ $button-bg-color: $links-color;
 $button-text-color: $main-light-color;
 $button-bg-hover-color: $main-light-color;
 $button-text-hover-color: $links-color;
+
+// Transitions
+$btn-and-link-hover: 1s;
