--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -28,6 +28,7 @@
     font-weight: 500;
     text-transform: uppercase;
     color: $main-text-color;
+    transition: color $btn-and-link-hover;
 
     &:hover {
       color: $nav-links-color;
