--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -1,6 +1,10 @@
 .catalog {
   display: grid;
-  grid-template-columns: repeat(4, $card-width);
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, $card-width);
   grid-column-gap: $card-grid-gapx;
   grid-row-gap: $card-grid-gapy;
+  max-width: 4 * $card-width + 3 * $card-grid-gapx + 2 * $card-gap-x;
+  margin: 0 auto;
+  padding: 0 $card-gap-x;
 }
